4주차/minju/demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-app
  labels:
    app: demo
    sbom-verified: "true"
spec:
  containers:
    - name: app
      image: ghcr.io/ori5r2/hello-slsa:v1
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"
  imagePullSecrets:
    - name: ghcrsecret
