4주차/minju/allowed-cpu-memory-limits.yaml
# 세 번째 정책: CPU/memory 강제 제한함으로써 자원 과사용 제한

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  validationFailureAction: enforce
  rules:
    - name: validate-resource-limits
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "CPU and memory requests/limits must be defined."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
                  requests:
                    cpu: "?*"
                    memory: "?*"
